--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <hr>
 <footer>
 <blockquote class="fin">
-				<b>♥️ Made with love by <a href="https://t.me/Sr_Pache">Franco</a></b>
+				<b>♥️ Made with love by <a href="https://twitter.com/Sr_Pache">Franco</a></b>
 </blockquote>
 </footer>
 </main>
