--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
-
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" media="all">
-    <link rel="stylesheet" href="https://unpkg.com/transition-style" />
-    <!--<script src="prueba.js"></script>-->
-    <!-- <style type="text/css">
-    body {
-        color: rgb(20, 0, 0);
-    }
-    </style> -->
+<html lang="es-AR">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="HTML, CSS, Python, cursos, gratis, recursos">
+    <meta name="description" content="Free Programming resources">
+    <meta name="author" content="various">
+    <!-- <meta http-equiv="refresh" content="30"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="stylesheet-pastel.css" media="all">
+    <link rel="stylesheet" href="https://unpkg.com/transition-style" />
     <title>Bienvenidos al grupo</title>
 </head>
 <div class="background"></div>
@@ -238,7 +235,7 @@
 </blockquote>
 </footer>
 <div class="fijo">
-    <p class="fijo">Ningún material de este sitio es de mi autoría. Créditos y agradecimientos totales a los autores de cada material :) <a class="button" role="button">&#9888;</a></p>
+    <span class="fijo-texto">&#9888; Ningún material de este sitio es de mi autoría. Créditos y agradecimientos totales a los autores de cada material :) <span class="fijo-boton"></span></span>
 </div>
 </body>
 
