--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="es-AR">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="HTML, CSS, Python, cursos, gratis, recursos">
     <meta name="description" content="Free Programming resources">
     <meta name="author" content="various">
-    <!-- <meta http-equiv="refresh" content="30"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="stylesheet-pastel.css" media="all">
+    <link rel="stylesheet" type="text/css" href="style.css" media="all">
     <link rel="stylesheet" href="https://unpkg.com/transition-style" />
-    <title>Bienvenidos al grupo</title>
+    <title>Cursos gratis</title>
 </head>
-<div class="background"></div>
 <body>
+    <header>
     <nav>
-        <ul class="nav">
+        <ul id="menu">
             <li><a href="#welcome">Presentación</a></li>
             <li><a href="#courses">Listado de cursos y recursos</a></li>
             <li><a href="#follow">A quién seguir</a></li>
-            <li><a href="#footer">Sobre mí</a></li>            
+            <li><a href="#footer">Sobre mí</a></li>
         </ul>
     </nav>
-    <main>
-	<!-- <p class="center"></p>     -->
-    <p class="center"><img src="logo.png" alt="Logo: DevsBB" width="100" height="100" /></p>
-    <h1>Cursos gratis</h1>
+    <div id="header"><img src="logo.png" alt="Logo: DevsBB" width="100" height="100"></div>
+    </header>
+</body>
+<div class="background"></div>
+<main>
+    <h1>DevsBB</h1>
     <h2 id="welcome">Presentación y bienvenida</h2>
     <p>Antes que nada, <b>gracias por tomarse el tiempo de leerme</b>. Mi nombre es <u>Franco</u>.
         Soy acompañante terapéutico y estudiante del profesorado de educación especial.
@@ -129,7 +129,7 @@
         <li><p><strong>Desarrollo Web Full Stack en Linkedin Learning</strong>: Este curso fue habilitado por la cuarentena de manera gratuita debido a que es uno de los 10 empleos con mayor
         demanda en Linkedin, la plataforma de empleo más grande del mundo.</p>
             <ul>
-                <li style="margin-top: -14px">Curso completo: <a
+                <li>Curso completo: <a
                     href="https://es.linkedin.com/learning/paths/conviertete-en-desarrollador-web-full-stack">Conviértete en Desarrollador
                     Web Full-Stack</a></li>
             </ul>
@@ -158,9 +158,9 @@
     <h3>Curso de Java - Plan 111 mil programadores</h3>
      
     <ul>
-        <li><strong>Teoría y práctica del programa 111 mil programadores</strong>:
+        <li><p><strong>Teoría y práctica del programa 111 mil programadores</strong>:</p>
             <ul>
-                <li style="margin-top: -14px">
+                <li>
                     PDF: <a href="https://drive.google.com/file/d/118a6PNUseO2t8xqTh7B8sojH94NPqSsG/view?usp=drivesdk">111 mil programadores</a>
                 </li>
             </ul>
@@ -225,18 +225,10 @@
         <li>Eugenia Bahit: <a href="https://twitter.com/EscuelaBahit" class="twitter-follow-button" data-show-count="false">@EscuelaBahit</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
         <li>Luis Zambrana: <a href="https://twitter.com/LuisZambrana" class="twitter-follow-button" data-show-count="false">@LuisZambrana</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
         <li>MrCodeDev: <a href="https://twitter.com/MrCodeDev" class="twitter-follow-button" data-show-count="false">@MrCodeDev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
-
     </ul>
 </main>
-<hr>
-<footer id="footer">
-<blockquote class="fin">
-				<b>♥️ Made with love by <a href="https://twitter.com/Sr_Pache">Franco</a></b>
-</blockquote>
-</footer>
-<div class="fijo">
-    <span class="fijo-texto">&#9888; Ningún material de este sitio es de mi autoría. Créditos y agradecimientos totales a los autores de cada material :) <span class="fijo-boton"></span></span>
+<footer><b>♥️ Made with love by <a href="https://twitter.com/Sr_Pache">Franco</a></b></footer>
+<div id="fix">
+    <span>&#9888; Ningún material de este sitio es de mi autoría. Créditos y agradecimientos totales a los autores de cada material :)</span>
 </div>
-</body>
-
 </html>
