--- a/3-about_me.html
+++ b/3-about_me.html
@@ -24,35 +24,19 @@
     </header>
     <nav>
         <section>
-            <a href="index.html" id="seleccionado">Presentación</a>
+            <a href="index.html" class="no-seleccionado">Presentación</a>
             <a href="1-cursos.html" class="no-seleccionado">Listado de cursos</a>
             <a href="2-a_quien_seguir.html" class="no-seleccionado">A quién seguir</a>
-            <a href="3-about_me.html" class="no-seleccionado">Sobre mí</a>
+            <a href="3-about_me.html" id="seleccionado">Sobre mí</a>
         </section>
     </nav>
     <main>
     <section class="titulos">
-        <h2>Presentación y bienvenida</h2>
+        <h2>Próximamente :)</h2>
     </section>
     <article class="contenidos">
-        <p>Antes que nada, <b>gracias por tomarse el tiempo de leerme</b>. Mi nombre es <u>Franco</u>. Soy acompañante terapéutico y estudiante del profesorado de educación especial.
-            Lo aclaro por las dudas: <b>no soy programador</b>, solo estoy aprendiendo por mi cuenta.</p>
-        <p>Durante la cuarentena aproveché el tiempo para investigar cómo empezar a programar en vistas de tener una salida laboral alternativa a futuro.</p>
-        <p>Estuve leyendo mucho, y me pareció bueno enfocarme en dos lenguajes que me interesaron para arrancar:</p>
-        <ul>
-            <li><b>Python</b>: Un lenguaje sencillo y sin demasiados tecnicismos, con salida laboral en el análisis de
-                datos, desarrollo de páginas web y aplicaciones multiplataforma</li>
-            <li><b class="lista">Desarrollo web</b>: Creación y diseño de páginas web. Para ello, debemos conocer tres lenguajes:
-                <ul class="three">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Javascript</li>
-                </ul>
-            </li>
-        </ul>
-
-        <p>Esta decisión es personal, y cualquiera sea el lenguaje que les interese va a estar bien,
-            pero a mí me pareció prudente empezar con lenguajes "sencillos".</p>
+        <p>Página en desarrollo...</p>
+         
     </article>
     </main>
     <footer>
