--- a/1-cursos.html
+++ b/1-cursos.html
@@ -27,7 +27,7 @@
             <a href="index.html" class="no-seleccionado">Presentación</a>
             <a href="1-cursos.html" id="seleccionado">Listado de cursos</a>
             <a href="2-a_quien_seguir.html" class="no-seleccionado">A quién seguir</a>
-            <a href="3-about_me.html" class="no-seleccionado">Sobre mí</a>
+            <a href="3-projects.html" class="no-seleccionado">Mis proyectos</a>
         </section>
     </nav>
     <main>
