--- a/3-projects.html
+++ b/3-projects.html
@@ -38,7 +38,7 @@
         <h3>Amaranto Frutas y Verduras</h3>
         <p>Si bien aún se encuentra en desarrollo, la página surge como necesidad de poder visibilizar un negocio familiar. Trabajando en primera instancia sobre las redes sociales e incorporando paulatinamente un mayor número de canales de contacto, la idea es ir escalando el servicio con el objetivo de hacer el negocio cada vez más rentable en la venta a través de la web y ofreciendo el servicio de entrega en domicilio.</p>
         <p>Por el momento, es solo la estructura del sitio web, realizada con HTML y CSS, sin ayuda de ningún framework. Te invito a que conozcas el sitio:</p>
-        <p style="text-align: right;"><button><a href="https://srpache.github.io/amarantoverduras/">Ir al sitio</a></button></p>
+        <p style="text-align: right;"><button><a href="https://srpache.github.io/amarantoverduras/" target="_blank">Ir al sitio</a></button></p>
         
          
     </article>
