--- a/1-cursos.html
+++ b/1-cursos.html
@@ -17,9 +17,8 @@
             <img style="border-radius: 50%; border: 2px solid rgba(43, 88, 224,0.15);" src="perfil.png" alt="logo" width="100px" height="100px">
             <h1>@Sr_Pache></h1>
         </div>
-        <div id="right">
-            <span class="material-icons">contact_mail</span>
-            <a href="#">Contacto</a>
+        <div>
+            <a href="4-contacto.html"><button><span class="material-icons middle">contact_mail</span><span class="middle">Contacto</span></button></a>
         </div>
     </header>
     <nav>
