--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="left">
-            <img style="border-radius: 50%; border: 2px solid rgba(43, 88, 224,0.15);" src="perfil.png" alt="logo" width="100px" height="100px">
+            <img style="border-radius: 50%;border:3px solid #eee;" src="perfil.png" alt="logo" width="100px" height="100px">
             <h1>@Sr_Pache></h1>
         </div>
         <div>
