--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
                     <a href="https://www.linkedin.com/in/francoivanpacheco/" target="_blank"><i class="fab fa-linkedin-in"></i>LinkedIn</a>
                     <a href="https://www.instagram.com/sr_pache/" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
                     <a href="mailto:sr_pache@protonmail.com" target="_blank"><i class="fas fa-envelope"></i>Email</a>
+                    <a href="https://github.com/SrPache" target="_blank"><i class="fab fa-github"></i>Github</a>
+                    <a href="https://www.freecodecamp.org/sr_pache" target="_blank"><i class="fab fa-free-code-camp"></i>FreeCodeCamp</a>
                 </div>
             </div>
         </section>
