Versión final de la web

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         </div>
     </div>
 
-    <main>
+    <section>
         <div class="container centrado" id="about-me">
             <img src="/img/main.jpg" alt="Imagen principal" id="main-img">
             <p class="lead fw-normal">Mi nombre es <span class="special">Franco Pacheco</span> y soy <span class="special">estudiante</span> de Desarrollo Web.
                 Muchas gracias por la visita y espero que me cuentes qué fue lo que más te gustó.</p>
             <a class="btn btn-outline-secondary" href="html/encuesta.html">Breve encuesta</a>
         </div>
-    </main>
+    </section>
     <main>
         <div class="container-fluid" id="projects">
             <h2>Mis proyectos</h2>
