--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="nav-item"><a href="#about-me" class="nav-link active" aria-current="page">Sobre mí</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Mis proyectos</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contacto</a></li>
-                <li class="nav-item"><a href="#mail" class="nav-link"><i class="fas fa-envelope i-button"></i></a></li>
+                <li class="nav-item"><a href="mailto:sr_pache@protonmail.com" class="nav-link"><i class="fas fa-envelope i-button"></i></a></li>
             </ul>
             </header>
         </div>
